# PicoMorseCodeTranslator

./: CMakeLists.txt  README.md  led.c  morse_code.c  potentiometer.c
includes/: potentiometer.h  seven_segment.h
